--- a/app/templates/lista_valoraciones.html
+++ b/app/templates/lista_valoraciones.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="table-container">
     <header class="valoracion-header">
-        <h2>Valoraciones Valoración Antropométrica</h2>
+        <h2>Valoración Antropométrica</h2>
         <h3>Paciente: {{ paciente['nombre'] }} {{ paciente['apellido_paterno'] }} {{ paciente['apellido_materno'] }}</h3>
     </header>
     
