--- a/app/templates/valoraciones/lista_valoraciones.html
+++ b/app/templates/valoraciones/lista_valoraciones.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 
 {% block title %}Valoraciones Antropométricas - {{ paciente['nombre'] }} {{ paciente['apellido_paterno'] }}{% endblock %}
 
