Actualizacion modal carga excel

--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -32,12 +32,12 @@
                 </li>
                 <li class="sidebar__item">
                     <a href="{{ url_for('pacientes.nuevo_paciente') }}" class="sidebar__link">
-                        <i class="fas fa-user-plus sidebar__icon"></i> Pacientes
+                        <i class="fas fa-user-plus sidebar__icon"></i> Alta Pacientes
                     </a>
                 </li>
                 <li class="sidebar__item">
-                    <a href="{{ url_for('valoracion.todas_valoraciones') }}" class="sidebar__link">
-                        <i class="fas fa-clipboard-list sidebar__icon"></i> Valoraciones
+                    <a href="{{ url_for('pacientes.lista_pacientes') }}" class="sidebar__link">
+                        <i class="fas fa-clipboard-list sidebar__icon"></i> Lista Pacientes
                     </a>
                 </li>
                 <li class="sidebar__item">
